--- a/AzureRedisCachingSystem/appsettings.json
+++ b/AzureRedisCachingSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "Redis": "localhost:6379"
+  "Redis": {
+    "ConnectionString": "localhost:6379"
   },
 
   "MongoDB": {
