--- a/AzureRedisCachingSystem/appsettings.json
+++ b/AzureRedisCachingSystem/appsettings.json
@@ -5,6 +5,6 @@
 
   "MongoDB": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "cachesystemdatabase"
+    "DatabaseName": "myappdb"
   }
 }
