Bugs fixed, progress for making code clean

--- a/AzureRedisCachingSystem/App.config
+++ b/AzureRedisCachingSystem/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="KeyConflictBehaviour" value="makeChanges"/>
+		<add key="KeyConflictBehaviour" value="none"/>
 	</appSettings>
 </configuration>
